0025534: TObj_Application unicode path issue.